created the information area

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>landing page </title>
     <link rel="stylesheet" href="/home/youssef/repos/odinproject-landing-page/landingcss.css">
 </head>
 <body>
@@ -29,7 +29,25 @@
             <p id="image-place">image</p>
         </div>
 </div>
-   
+
     </header>
+  <b>Some random information </b> 
+<div class="info-section">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+<div class="info-text">
+    <span>this is some random text discribing the image content </span>
+    <span>text 2</span>
+    <span>text 3</span>
+    <span>text 4</span>
+</div>
+<div class="quote-area ">
+
+</div>
+      
+   
 </body>
 </html>
