created the qute area

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <span>text 4</span>
 </div>
 <div class="quote-area ">
+   <blockquote>“It is better to fail in originality than to succeed in imitation.”<br>
+    <p id="quote-auth">– Herman Melville</p>
+     </blockquote>
 
 </div>
       
