completed the page styling

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="/home/youssef/repos/odinproject-landing-page/landingcss.css">
 </head>
 <body>
-    <img src="/home/youssef/repos/odinproject-landing-page/download.png" alt="logo">
+   
     <header >
+        <!-- <span><img style="border: 2px solid red ;" src="/home/youssef/repos/odinproject-landing-page/download.png" alt="logo"></span> -->
         <div class="logo-links"  >
-        <h6 id="hero-logo">hearder logo</h6>
+        <h6 id="hero-logo" ><img src="/home/youssef/repos/odinproject-landing-page/download.png" alt="logo"> header logo</h6>
         <nav  >
             <a class="nav-text" href="">link1</a>
             <a class="nav-text" href="">link2</a>
@@ -22,7 +23,7 @@
            <div   class="text-button">
              <h1  >This website is <br> Awesome</h1>
              <p >this website has some sub-text goes here under the main title,<br>it's a smaller font and the text contrast is lower </p>
-            <button id="sign-up">sign up </button>
+            <button >sign up </button>
         </div>
 
         <div  class="image">
@@ -48,9 +49,16 @@
    <blockquote>“It is better to fail in originality than to succeed in imitation.”<br>
     <p id="quote-auth">– Herman Melville</p>
      </blockquote>
-
 </div>
-      
-   
-</body>
+     <span class="call-action" >
+    <div class="call-text1">
+        <h2>call to action! it's time .</h2>
+        <p>text to call to action, some random text to ttes </p>
+    </div>
+    <div class="call-text2"> <button>sign up</button></div>
+      </span>
+      <footer >
+        copyright © the odin projrct 2021
+      </footer>
+    </body>
 </html>
