added picture's link to logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header >
         <!-- <span><img style="border: 2px solid red ;" src="/home/youssef/repos/odinproject-landing-page/download.png" alt="logo"></span> -->
         <div class="logo-links"  >
-        <h6 id="hero-logo" ><img src="/home/youssef/repos/odinproject-landing-page/download.png" alt="logo"> header logo</h6>
+        <h6 id="hero-logo" ><img src="download.png" alt="logo"> header logo</h6>
         <nav  >
             <a class="nav-text" href="">link1</a>
             <a class="nav-text" href="">link2</a>
